temp_test/valid/simpleIntAddition.wacc
# simple int addition

# Output:
#

# Program:

begin
  int x = 5;
  int y = 10;
  x = x + y;
  println x
end