temp_test/invalid/imports/nonExistentFile.wacc
# importing file that doesnt exist

# Output:
#

# Program:

import notThere.wacc

begin
  int x = 5
end